2013-01-30  ------ inet-2.1.0 released ------

2012-08-07  ------ inet-2.0.0 released ------

2012-06-25  ------ inet-1.99.5 released ------

2012-06-08  Rudolf Hornig

	Added LinearNodeDistributionMobility and TRACIMobility from the 
	INETMANET project.

2012-05-18  Rudolf Hornig

	Mobility models now correctly refer to the constraint area.

2012-04-27  Levente Meszaros

	Mobility: added default icon
2012-03-20  ------ inet-1.99.4 released ------

2012-02-24  ------ inet-1.99.3 released ------

2011-11-18  ------ INET-1.99.2 released ------

2011-09-15  Levente Meszaros

	Cosmetic changes

2011-07-09  Levente Meszaros

	Added IMobility.h

2011-05-30  ------ INET-1.99.1 released ------

2011-05-10  Andras Varga

	Moved the mobility models into the models/ subdirectory, so this folder
	only contains module interfaces. This was necessary so that we can
	turn mobility into an optional project feature (see .oppfeatures)

	See earlier history in the ChangeLog of models/.